--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -1,4 +1,4 @@
-name: Pylint Check
+name: Run Unit Tests
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 jobs:
-  lint:
+  test:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -23,9 +23,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install --no-cache-dir pylint
           pip install --no-cache-dir -r requirements.txt
 
-      - name: Run Pylint
-        run: |
-          PYTHONPATH=. pylint $(git ls-files '*.py')
+      - name: Run tests
+        run: python -m unittest discover -s tests
