--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -1,6 +1,12 @@
 name: Build and Push Docker Image
 
 on:
+  workflow_run:
+    workflows:
+      - "Pylint Check"
+      - "Run Unit Tests"
+    types:
+      - completed
   push:
     branches:
       - main
