--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,2 @@
 [MESSAGES CONTROL]
-disable=too-many-instance-attributes, too-many-arguments, too-many-positional-arguments
+disable=too-many-instance-attributes, too-many-arguments, too-many-positional-arguments, R0801
