--- a/config.ini.example
+++ b/config.ini.example
@@ -26,3 +26,4 @@ ssl_inspect = false
 inspect_ca_cert = certs/ca/cert.pem
 inspect_ca_key = certs/ca/key.pem
 inspect_certs_folder = certs/
+cancel_inspect = config/cancel_inspect.txt
