fix install benchmark requirements & pylint

--- a/.github/workflows/code-scan.yml
+++ b/.github/workflows/code-scan.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           pip install --no-cache-dir pylint bandit
           pip install --no-cache-dir -r requirements.txt
+          pip install --no-cache-dir -r benchmark/requirements.txt
 
       - name: Run Pylint
         run: |
