Reorganized project structure and updated unit tests

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,4 +3,4 @@ current_version = 0.3.0
 commit = True
 tag = True
 
-[bumpversion:file:utils/version.py]
+[bumpversion:file:pyproxy/utils/version.py]
