Fix Cosign by adding --yes flag

--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Install Cosign
+        uses: sigstore/cosign-installer@v3.8.1
+
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
@@ -57,14 +60,11 @@ jobs:
           docker push ghcr.io/${{ env.REPO_OWNER }}/pyproxy:${{ env.VERSION }}
           docker push ghcr.io/${{ env.REPO_OWNER }}/pyproxy:latest
 
-      - name: Install Cosign
-        uses: sigstore/cosign-installer@v3.1.1
-
       - name: Sign Docker images with Cosign (OIDC)
         env:
           COSIGN_EXPERIMENTAL: "1"
         run: |
-          cosign sign ghcr.io/${{ env.REPO_OWNER }}/pyproxy:${{ env.VERSION }}
-          cosign sign ghcr.io/${{ env.REPO_OWNER }}/pyproxy:latest
-          cosign sign ghcr.io/${{ env.REPO_OWNER }}/pyproxy:${{ env.VERSION }}-slim
-          cosign sign ghcr.io/${{ env.REPO_OWNER }}/pyproxy:latest-slim
+          cosign sign --yes ghcr.io/${{ env.REPO_OWNER }}/pyproxy:${{ env.VERSION }}
+          cosign sign --yes ghcr.io/${{ env.REPO_OWNER }}/pyproxy:latest
+          cosign sign --yes ghcr.io/${{ env.REPO_OWNER }}/pyproxy:${{ env.VERSION }}-slim
+          cosign sign --yes ghcr.io/${{ env.REPO_OWNER }}/pyproxy:latest-slim
