--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -24,16 +24,20 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Install Cosign
         uses: sigstore/cosign-installer@v3.8.1
 
       - name: Log in to GitHub Container Registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+        uses: docker/login-action@v3.3.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Get version from version.py
         id: get_version
@@ -60,11 +64,13 @@ jobs:
           docker push ghcr.io/${{ env.REPO_OWNER }}/pyproxy:${{ env.VERSION }}
           docker push ghcr.io/${{ env.REPO_OWNER }}/pyproxy:latest
 
-      - name: Sign Docker images with Cosign (OIDC)
+      - name: Sign the publisehd Docker image
         env:
-          COSIGN_EXPERIMENTAL: "1"
+          COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
         run: |
-          cosign sign --yes ghcr.io/${{ env.REPO_OWNER }}/pyproxy:${{ env.VERSION }}
-          cosign sign --yes ghcr.io/${{ env.REPO_OWNER }}/pyproxy:latest
-          cosign sign --yes ghcr.io/${{ env.REPO_OWNER }}/pyproxy:${{ env.VERSION }}-slim
-          cosign sign --yes ghcr.io/${{ env.REPO_OWNER }}/pyproxy:latest-slim
+          cosign sign --yes --key env://COSIGN_PRIVATE_KEY ghcr.io/${{ env.REPO_OWNER }}/pyproxy:${{ env.VERSION }}
+          cosign sign --yes --key env://COSIGN_PRIVATE_KEY ghcr.io/${{ env.REPO_OWNER }}/pyproxy:latest
+          cosign sign --yes --key env://COSIGN_PRIVATE_KEY ghcr.io/${{ env.REPO_OWNER }}/pyproxy:${{ env.VERSION }}-slim
+          cosign sign --yes --key env://COSIGN_PRIVATE_KEY ghcr.io/${{ env.REPO_OWNER }}/pyproxy:latest-slim
+        env:
+          COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
