--- a/config.ini.example
+++ b/config.ini.example
@@ -21,6 +21,7 @@ blocked_url = config/blocked_url.txt
 [Options]
 shortcuts = config/shortcuts.txt
 custom_header = config/custom_header.json
+authorized_ips = config/authorized_ips.txt
 
 [Security]
 ssl_inspect = false
