remove version.py

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,4 +3,4 @@ current_version = 0.3.2
 commit = True
 tag = True
 
-[bumpversion:file:pyproxy/utils/version.py]
+[bumpversion:file:pyproxy/__init__.py]
