--- a/config.ini.example
+++ b/config.ini.example
@@ -8,6 +8,8 @@ access_log = ./logs/access.log
 block_log = ./logs/block.log
 no_logging_access = false
 no_logging_block = false
+console_format = %(asctime)s - %(levelname)s - %(message)s
+datefmt = %d/%m/%Y %H:%M:%S
 
 [Files]
 html_403 = assets/403.html
